# docs/swagger.json
@@ -77,6 +77,41 @@
                 }
             }
         },
+        "/ws/token": {
+            "get": {
+                "security": [
+                    {
+                        "Oauth2Application": [
+                            ""
+                        ]
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Web Socket"
+                ],
+                "summary": "Get Token for WebSocket connection",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/ResponseOk"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/ResponseError"
+                        }
+                    }
+                }
+            }
+        },
         "/xplm/dataref": {
             "get": {
                 "security": [
@@ -275,8 +310,8 @@
         "": {
             "type": "oauth2",
             "flow": "accessCode",
-            "authorizationUrl": "https://pluginlab.xairline.org/oauth/authorize",
-            "tokenUrl": "https://pluginlab.xairline.org/oauth/token"
+            "authorizationUrl": "https://auth.xairline.org/oidc/auth",
+            "tokenUrl": "https://auth.xairline.org/oidc/token"
         }
     }
 }
